# opencl-example

./: CMakeLists.txt  README.md
Reduction/: CMakeLists.txt  reduction_complete.cl  reduction_complete.cpp
ejercicioFraccionario/: CMakeLists.txt  matvec.c  matvec.cpp
lib/: CMakeLists.txt  Fraccional.cpp  Fraccional.h  matvec.cl  sumvec.cl
wg_test/: CMakeLists.txt  wg_test.cpp
